--- a/msvc/libkmlbase.vcxproj
+++ b/msvc/libkmlbase.vcxproj
@@ -419,7 +419,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -440,7 +440,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2015_Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -462,7 +462,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2017_Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -484,7 +484,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2019_Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -506,7 +506,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2012_Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -528,7 +528,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2010_Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -550,7 +550,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -571,7 +571,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2015_Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -592,7 +592,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2017_Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -613,7 +613,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2019_Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -634,7 +634,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2012_Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -655,7 +655,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2010_Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -675,7 +675,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader />
@@ -695,7 +695,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2015_Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -717,7 +717,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2017_Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -739,7 +739,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2019_Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -761,7 +761,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2012_Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -783,7 +783,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2010_Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -805,7 +805,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -827,7 +827,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2015_Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -849,7 +849,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2017_Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -871,7 +871,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2019_Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -893,7 +893,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2012_Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -915,7 +915,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='vs2010_Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\..\minizip\minizip_1.01e;..\..\expat-2.1.0\lib;$(BOOST_DIR);..\src;..\..\uriparser-0.7.7\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\$(ZLIB_DIR);..\minizip\minizip_1.01e;..\..\$(EXPAT_DIR)\lib;$(BOOST_DIR);..\src;..\..\$(URIPARSER_DIR)\include;%(AdditionalIncludeDirectories);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
